src/recipe/parser/snapshots/rattler_build__recipe__parser__package__tests__invalid_fields.snap
---
source: src/recipe/parser/package.rs
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: invalid field `invalid`.
   ╭─[4:1]
 4 │             version: 0.1.0
 5 │             invalid: "field"
   ·             ───┬───
   ·                ╰── here
 6 │         
   ╰────
  help: valid fields for `package` are `name` and `version`

